--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,33 @@
 services:
   joomla:
-    image: joomla
+    image: joomla:5-php8.3-apache
+    container_name: ${PROJECT_NAME}-joomla
     restart: always
     ports:
-      - 80:80
+      - ${PORT_JOOMLA}:80
     env_file:
       - .env
+    environment:
+      - JOOMLA_DB_HOST=${JOOMLA_DB_HOST}
+      - JOOMLA_DB_USER=${JOOMLA_DB_USER}
+      - JOOMLA_DB_PASSWORD=${JOOMLA_DB_PASSWORD}
+      - JOOMLA_DB_NAME=${JOOMLA_DB_NAME}
     volumes:
       - ./joomla:/var/www/html
     networks:
       - joomla_network
+    depends_on:
+      - db
 
   db:
     image: mysql:8.0
+    container_name: ${PROJECT_NAME}-mysql
     restart: always
+    ports:
+      - ${PORT_MYSQL}:3306
     env_file:
       - .env
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -23,13 +35,14 @@ services:
 
   phpmyadmin:
     image: phpmyadmin:latest
+    container_name: ${PROJECT_NAME}-phpmyadmin
     restart: always
     depends_on:
       - db
     env_file:
       - .env
     ports:
-      - "82:80"
+      - "${PORT_PHPMYADMIN}:80"
     networks:
       - joomla_network
 
