📝 Update .env-example and docker-entrypoint.sh for improved configuration and security

--- a/.env-example
+++ b/.env-example
@@ -4,15 +4,26 @@
 # und muss mit einem Buchstaben oder einer Zahl beginnen
 # ACHTUNG! ■ PROJECT_NAME muss mit dem Namen des Docker Compose Ordners übereinstimmen
 
-PROJECT_NAME=web-joomla-master-2508-09
+# MUSS geändert werden - Name des Projektordners verwenden:
+# ■ PROJECT_NAME=mein-neues-projekt
 
+# Sicherheit - eigene Passwörter verwenden:
+# ■ MYSQL_PASSWORD=mein-sicheres-passwort
+# ■ MYSQL_ROOT_PASSWORD=mein-root-passwort
+# ■ JOOMLA_ADMIN_PASSWORD=mein-admin-passwort
+
+# Optional anpassen:
+# ■ JOOMLA_ADMIN_EMAIL=admin@meinedomain.com
+# ■ JOOMLA_SITE_NAME=Mein Joomla Projekt
+
+# ■■■■■ PROJECT ■■■■■■■
+PROJECT_NAME=web-joomla-master-2508-09
 # ■■■■■ DOCKER ■■■■■■■
 COMPOSE_PROJECT_NAME=${PROJECT_NAME}
 PORT_JOOMLA=80
 PORT_LANDING=81
 PORT_PHPMYADMIN=82
 PORT_MYSQL=3306
-
 # ■■■■■ MYSQL ■■■■■■■■
 MYSQL_DATABASE=joomla_db
 MYSQL_USER=joomla
@@ -20,7 +31,6 @@ MYSQL_PASSWORD=examplepass
 MYSQL_ROOT_PASSWORD=rootpass
 MYSQL_PORT=${PORT_MYSQL}
 MYSQL_HOST=db
-
 # ■■■■■ JOOMLA ■■■■■■■
 JOOMLA_DB_HOST=${MYSQL_HOST}
 JOOMLA_DB_TYPE=mysqli
@@ -33,7 +43,6 @@ JOOMLA_ADMIN_USER=Joomla Hero
 JOOMLA_ADMIN_USERNAME=${MYSQL_USER}
 JOOMLA_ADMIN_PASSWORD=joomla@secured
 JOOMLA_ADMIN_EMAIL=joomla@example.com
-
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
 PMA_USER=root
