🚀 Landing-Page Integration hinzugefügt
✅ Neuer landing-Container für Projekt-Informationsseite
✅ Separater PHP-Apache Container auf Port 81
✅ Komplett unabhängig von Joomla-Installation
✅ Nutzt bestehende .env-Konfiguration
✅ README.md vollständig aktualisiert
✅ Neue URL-Struktur dokumentiert:
   - Port 81: Projekt-Info/Landing-Page
   - Port 80: Joomla CMS
   - Port 82: phpMyAdmin
✅ Minimaler Ressourcenverbrauch (~20MB zusätzlich)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,17 @@
 services:
+  landing:
+    image: php:8.3-apache
+    container_name: ${PROJECT_NAME}-landing
+    restart: always
+    ports:
+      - ${PORT_LANDING}:80
+    env_file:
+      - .env
+    volumes:
+      - ./landing:/var/www/html
+    networks:
+      - joomla_network
+
   joomla:
     image: joomla:5-php8.3-apache
     container_name: ${PROJECT_NAME}-joomla
