korrigiert: CHAT-HISTORY.MD in docker_compose.yaml (landing-Container) integriert

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - .env
     volumes:
       - ./landing:/var/www/html
+      - ./CHAT_HISTORY.md:/var/www/CHAT_HISTORY.md:ro
     networks:
       - joomla_network
 
