--- a/.env-example
+++ b/.env-example
@@ -1,23 +1,23 @@
-# .env Datei
-# ACHTUNG keine Sonderzeichen wie =${} in den Variablen verwenden
-# ■ ACHTUNG! ■ PROJECT_NAME darf nur aus # Kleinbuchstaben, alphanumerischen Zeichen, Bindestrichen und Unterstrichen bestehen
-# und muss mit einem Buchstaben oder einer Zahl beginnen
-# ACHTUNG! ■ PROJECT_NAME muss mit dem Namen des Docker Compose Ordners übereinstimmen
+# .env Configuration File
+# WARNING: Do not use special characters like ={} in variables
+# ■ WARNING! ■ PROJECT_NAME must only contain lowercase letters, alphanumeric characters, hyphens and underscores
+# and must start with a letter or number
+# WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
 
-# MUSS geändert werden - Name des Projektordners verwenden:
-# ■ PROJECT_NAME=mein-neues-projekt
+# MUST be changed - use your project folder name:
+# ■ PROJECT_NAME=my-new-project
 
-# Sicherheit - eigene Passwörter verwenden:
-# ■ MYSQL_PASSWORD=mein-sicheres-passwort
-# ■ MYSQL_ROOT_PASSWORD=mein-root-passwort
-# ■ JOOMLA_ADMIN_PASSWORD=mein-admin-passwort
+# Security - use your own passwords:
+# ■ MYSQL_PASSWORD=my-secure-password
+# ■ MYSQL_ROOT_PASSWORD=my-root-password
+# ■ JOOMLA_ADMIN_PASSWORD=my-admin-password
 
-# Optional anpassen:
-# ■ JOOMLA_ADMIN_EMAIL=admin@meinedomain.com
-# ■ JOOMLA_SITE_NAME=Mein Joomla Projekt
+# Optional customization:
+# ■ JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+# ■ JOOMLA_SITE_NAME=My Joomla Project
 
 # ■■■■■ PROJECT ■■■■■■■
-PROJECT_NAME=web-joomla-master-2508-09
+PROJECT_NAME=your-new-project-name
 # ■■■■■ DOCKER ■■■■■■■
 COMPOSE_PROJECT_NAME=${PROJECT_NAME}
 PORT_JOOMLA=80
@@ -50,81 +50,5 @@ PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
 
 
 
-
-
-
-
-# PROJECT_NAME=web-joomla-master-250806
-# JOOMLA_ZIP=./_assets/Joomla_5.3.2-Stable-Full_Package.zip
-# # ■■■■■ MYSQL ■■■■■
-# MYSQL_ROOT_PASSWORD=rootpass
-# MYSQL_DATABASE=joomladb
-# MYSQL_USER=joomlauser
-# MYSQL_PASSWORD=geheimespasswort
-# MYSQL_PORT=3306
-# MYSQL_HOST=db
-
-# # ■■■■■ JOOMLA ■■■■■■■
-# JOOMLA_DB_HOST=db
-# JOOMLA_DB_NAME=${MYSQL_DATABASE}
-# JOOMLA_DB_USER=${MYSQL_USER}
-# JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
-# JOOMLA_ADMIN_USER=admin
-# JOOMLA_ADMIN_PASSWORD=meingeheimespasswort
-# JOOMLA_ADMIN_EMAIL=admin@example.com
-# JOOMLA_SITE_NAME=my_joomla_site
-# JOOMLA_DB_TYPE=mysqli
-# JOOMLA_MAIL_FROM=info@example.com
-# JOOMLA_MAIL_FROM_NAME="Joomla Admin"
-# JOOMLA_SECRET=Zv7cn8HoM2Ks_6aW1G-BqrDX
-
-# # Ergänzungen zur bestehenden .env Datei
-
-# # ■■■■■ JOOMLA AUTOMATISCHE INSTALLATION ■■■■■
-# JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
-# JOOMLA_ADMIN_USER=${JOOMLA_ADMIN_USER}
-# JOOMLA_ADMIN_USERNAME=${JOOMLA_ADMIN_USER}
-# JOOMLA_ADMIN_PASSWORD=${JOOMLA_ADMIN_PASSWORD}
-# JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
-# JOOMLA_DB_TYPE=${JOOMLA_DB_TYPE}
-# JOOMLA_DB_PREFIX=joom_
-
-# # SMTP Konfiguration (optional)
-# # JOOMLA_SMTP_HOST=${MAIL_SERVER}
-# # JOOMLA_SMTP_HOST_PORT=${MAIL_PORT}
-
-
-# # ■■■■■ PHPMYADMIN ■■■■■■■
-# PMA_HOST=${MYSQL_HOST}
-# PMA_USER=root
-# PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
-# PMA_PORT=${MYSQL_PORT}
-# # ■■■■■ PHP ■■■■■
-# PHP_MEMORY_LIMIT=512M
-# PHP_MAX_EXECUTION_TIME=300
-# PHP_MAX_INPUT_VARS=10000
-# PHP_UPLOAD_MAX_FILESIZE=100M
-# PHP_POST_MAX_SIZE=100M
-# # ■■■■■ APACHE ■■■■■
-# APACHE_DOCUMENT_ROOT=/var/www/html
-# APACHE_LOG_DIR=/var/log/apache2
-# # ■■■■■ VIRTUAL HOSTS ■■■■■
-# VIRTUAL_HOST=localhost
-# # ■■■■■ SSL ■■■■■
-# SSL_CERTIFICATE=/etc/ssl/certs/ssl-cert-snakeoil.pem
-# SSL_CERTIFICATE_KEY=/etc/ssl/private/ssl-cert-snakeoil.key
-# # ■■■■■ LOGGING ■■■■■
-# LOG_LEVEL=info
-# # ■■■■■ TIMEZONE ■■■■■
-# TIMEZONE=Europe/Berlin
-# # ■■■■■ BACKUP ■■■■■
-# BACKUP_DIR=/var/backups/joomla
-# # ■■■■■ CRON JOBS ■■■■■
-# CRON_JOBS="0 2 * * * /usr/local/bin/joomla_backup.sh > /dev/null 2>&1"
-# # ■■■■■ MAIL SERVER ■■■■■
-# MAIL_SERVER=smtp.example.com
-# MAIL_PORT=587
-# MAIL_USER=mailuser
-# MAIL_PASSWORD=mailpassword
 
 
