🌍 Update .env-example: Translate comments to German and standardize project configuration

--- a/.env-example
+++ b/.env-example
@@ -1,52 +1,53 @@
 # .env Configuration File
-# WARNING: Do not use special characters like ={} in variables
-# ■ WARNING! ■ PROJECT_NAME must only contain lowercase letters, alphanumeric characters, hyphens and underscores
-# and must start with a letter or number
-# WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
+# ACHTUNG keine Sonderzeichen wie ={} in den Variablen verwenden
+# ■ ACHTUNG! ■ PROJECT_NAME darf nur aus Kleinbuchstaben, alphanumerischen Zeichen, Bindestrichen und Unterstrichen bestehen
+# und muss mit einem Buchstaben oder einer Zahl beginnen
+# ACHTUNG! ■ PROJECT_NAME muss mit dem Namen des Docker Compose Ordners übereinstimmen
 
-# MUST be changed - use your project folder name:
-# ■ PROJECT_NAME=my-new-project
+# MUSS geändert werden - verwenden Sie Ihren Projektordnernamen:
+PROJECT_NAME=my-awesome-joomla-project
 
-# Security - use your own passwords:
-# ■ MYSQL_PASSWORD=my-secure-password
-# ■ MYSQL_ROOT_PASSWORD=my-root-password
-# ■ JOOMLA_ADMIN_PASSWORD=my-admin-password
+# Sicherheit - verwenden Sie Ihre eigenen Passwörter:
+MYSQL_PASSWORD=my-secure-password
+MYSQL_ROOT_PASSWORD=my-root-password
+JOOMLA_ADMIN_PASSWORD=my-admin-password
 
-# Optional customization:
-# ■ JOOMLA_ADMIN_EMAIL=admin@mydomain.com
-# ■ JOOMLA_SITE_NAME=My Joomla Project
+# Optionale Anpassungen:
+JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+JOOMLA_SITE_NAME=My Joomla Project
 
-# ■■■■■ PROJECT ■■■■■■■
-PROJECT_NAME=your-new-project-name
 # ■■■■■ DOCKER ■■■■■■■
-COMPOSE_PROJECT_NAME=${PROJECT_NAME}
+COMPOSE_PROJECT_NAME=my-awesome-joomla-project
 PORT_JOOMLA=80
 PORT_LANDING=81
 PORT_PHPMYADMIN=82
 PORT_MYSQL=3306
+
 # ■■■■■ MYSQL ■■■■■■■■
 MYSQL_DATABASE=joomla_db
 MYSQL_USER=joomla
-MYSQL_PASSWORD=examplepass
-MYSQL_ROOT_PASSWORD=rootpass
-MYSQL_PORT=${PORT_MYSQL}
+MYSQL_PASSWORD=my-secure-password
+MYSQL_ROOT_PASSWORD=my-root-password
+MYSQL_PORT=3306
 MYSQL_HOST=db
+
 # ■■■■■ JOOMLA ■■■■■■■
-JOOMLA_DB_HOST=${MYSQL_HOST}
+JOOMLA_DB_HOST=db
 JOOMLA_DB_TYPE=mysqli
 JOOMLA_DB_PREFIX=joom_
-JOOMLA_DB_USER=${MYSQL_USER}
-JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
-JOOMLA_DB_NAME=${MYSQL_DATABASE}
-JOOMLA_SITE_NAME=${PROJECT_NAME}
+JOOMLA_DB_USER=joomla
+JOOMLA_DB_PASSWORD=my-secure-password
+JOOMLA_DB_NAME=joomla_db
+JOOMLA_SITE_NAME=My Joomla Project
 JOOMLA_ADMIN_USER=Joomla Hero
-JOOMLA_ADMIN_USERNAME=${MYSQL_USER}
-JOOMLA_ADMIN_PASSWORD=joomla@secured
-JOOMLA_ADMIN_EMAIL=joomla@example.com
+JOOMLA_ADMIN_USERNAME=joomla
+JOOMLA_ADMIN_PASSWORD=my-admin-password
+JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
 PMA_USER=root
-PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
+PMA_PASSWORD=my-root-password
 
 
 
