Refactor .env-example: Replace hardcoded values with variable references for improved configurability

--- a/.env-example
+++ b/.env-example
@@ -17,7 +17,7 @@ JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 JOOMLA_SITE_NAME=My Joomla Project
 
 # ■■■■■ DOCKER ■■■■■■■
-COMPOSE_PROJECT_NAME=my-awesome-joomla-project
+# COMPOSE_PROJECT_NAME=my-awesome-joomla-project
 PORT_JOOMLA=80
 PORT_LANDING=81
 PORT_PHPMYADMIN=82
@@ -36,18 +36,18 @@ JOOMLA_DB_HOST=db
 JOOMLA_DB_TYPE=mysqli
 JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
-JOOMLA_DB_PASSWORD=my-secure-password
+JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
 JOOMLA_DB_NAME=joomla_db
-JOOMLA_SITE_NAME=My Joomla Project
+JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
 JOOMLA_ADMIN_USER=Joomla Hero
 JOOMLA_ADMIN_USERNAME=joomla
 JOOMLA_ADMIN_PASSWORD=my-admin-password
-JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
 PMA_USER=root
-PMA_PASSWORD=my-root-password
+PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
 
 
 
