Update .env-example and start-project.ps1: Replace hardcoded project name with variable reference and enhance variable resolution logic

--- a/.env-example
+++ b/.env-example
@@ -17,7 +17,7 @@ JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 JOOMLA_SITE_NAME=My Joomla Project
 
 # ■■■■■ DOCKER ■■■■■■■
-# COMPOSE_PROJECT_NAME=my-awesome-joomla-project
+COMPOSE_PROJECT_NAME=${PROJECT_NAME}
 PORT_JOOMLA=80
 PORT_LANDING=81
 PORT_PHPMYADMIN=82
