--- a/.env-example
+++ b/.env-example
@@ -38,11 +38,11 @@ JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
 JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
 JOOMLA_DB_NAME=joomla_db
-JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
+JOOMLA_SITE_NAME=My Joomla Project
 JOOMLA_ADMIN_USER=Joomla Hero
 JOOMLA_ADMIN_USERNAME=joomla
 JOOMLA_ADMIN_PASSWORD=my-admin-password
-JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
+JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
