--- a/.env-example
+++ b/.env-example
@@ -26,8 +26,8 @@ PORT_MYSQL=3306
 # ■■■■■ MYSQL ■■■■■■■■
 MYSQL_DATABASE=joomla_db
 MYSQL_USER=joomla
-MYSQL_PASSWORD=my-secure-password
-MYSQL_ROOT_PASSWORD=my-root-password
+MYSQL_PASSWORD=${MYSQL_PASSWORD}
+MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
 MYSQL_PORT=3306
 MYSQL_HOST=db
 
@@ -38,11 +38,11 @@ JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
 JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
 JOOMLA_DB_NAME=joomla_db
-JOOMLA_SITE_NAME=My Joomla Project
+JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
 JOOMLA_ADMIN_USER=Joomla Hero
 JOOMLA_ADMIN_USERNAME=joomla
-JOOMLA_ADMIN_PASSWORD=my-admin-password
-JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+JOOMLA_ADMIN_PASSWORD=${JOOMLA_ADMIN_PASSWORD}
+JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
