Refactor .env-example: Replace variable references with explicit values for MYSQL_PASSWORD, JOOMLA_DB_PASSWORD, and PMA_PASSWORD for clarity

--- a/.env-example
+++ b/.env-example
@@ -26,8 +26,6 @@ PORT_MYSQL=3306
 # ■■■■■ MYSQL ■■■■■■■■
 MYSQL_DATABASE=joomla_db
 MYSQL_USER=joomla
-MYSQL_PASSWORD=${MYSQL_PASSWORD}
-MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
 MYSQL_PORT=3306
 MYSQL_HOST=db
 
@@ -36,18 +34,15 @@ JOOMLA_DB_HOST=db
 JOOMLA_DB_TYPE=mysqli
 JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
-JOOMLA_DB_PASSWORD=${MYSQL_PASSWORD}
+JOOMLA_DB_PASSWORD=my-secure-password
 JOOMLA_DB_NAME=joomla_db
-JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
 JOOMLA_ADMIN_USER=Joomla Hero
 JOOMLA_ADMIN_USERNAME=joomla
-JOOMLA_ADMIN_PASSWORD=${JOOMLA_ADMIN_PASSWORD}
-JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
 PMA_USER=root
-PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
+PMA_PASSWORD=my-root-password
 
 
 
