--- a/.env-example
+++ b/.env-example
@@ -8,9 +8,11 @@
 PROJECT_NAME=my-awesome-joomla-project
 
 # Sicherheit - verwenden Sie Ihre eigenen Passwörter:
-MYSQL_PASSWORD=my-secure-password
+JOOMLA_ADMIN_PASSWORD=my-joomla-admin-password
+JOOMLA_ADMIN_USERNAME=admin
+JOOMLA_DB_PASSWORD=my-secure-password
 MYSQL_ROOT_PASSWORD=my-root-password
-JOOMLA_ADMIN_PASSWORD=my-admin-password
+
 
 # Optionale Anpassungen:
 JOOMLA_SITE_NAME=My Joomla Project
@@ -25,6 +27,7 @@ PORT_MYSQL=3306
 
 # ■■■■■ MYSQL ■■■■■■■■
 MYSQL_DATABASE=joomla_db
+MYSQL_PASSWORD=${JOOMLA_DB_PASSWORD}
 MYSQL_USER=joomla
 MYSQL_PORT=3306
 MYSQL_HOST=db
@@ -34,15 +37,14 @@ JOOMLA_DB_HOST=db
 JOOMLA_DB_TYPE=mysqli
 JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
-JOOMLA_DB_PASSWORD=my-secure-password
 JOOMLA_DB_NAME=joomla_db
 JOOMLA_ADMIN_USER=Joomla Hero
-JOOMLA_ADMIN_USERNAME=joomla
+
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
 PMA_USER=root
-PMA_PASSWORD=my-root-password
+PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
 
 
 
