Refactor .env-example: Update comments from German to English for better clarity and consistency

--- a/.env-example
+++ b/.env-example
@@ -1,20 +1,20 @@
 # .env Configuration File
-# ACHTUNG keine Sonderzeichen wie ={} in den Variablen verwenden
-# ■ ACHTUNG! ■ PROJECT_NAME darf nur aus Kleinbuchstaben, alphanumerischen Zeichen, Bindestrichen und Unterstrichen bestehen
-# und muss mit einem Buchstaben oder einer Zahl beginnen
-# ACHTUNG! ■ PROJECT_NAME muss mit dem Namen des Docker Compose Ordners übereinstimmen
+# WARNING: Do not use special characters like ={} in variables
+# ■ WARNING! ■ PROJECT_NAME may only contain lowercase letters, alphanumeric characters, hyphens and underscores
+# and must start with a letter or number
+# WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
 
-# MUSS geändert werden - verwenden Sie Ihren Projektordnernamen:
+# MUST be changed - use your project folder name:
 PROJECT_NAME=my-awesome-joomla-project
 
-# Sicherheit - verwenden Sie Ihre eigenen Passwörter:
+# Security - use your own passwords:
 JOOMLA_ADMIN_PASSWORD=my-joomla-admin-password
 JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=my-secure-password
 MYSQL_ROOT_PASSWORD=my-root-password
 
 
-# Optionale Anpassungen:
+# Optional customizations:
 JOOMLA_SITE_NAME=My Joomla Project
 JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 
