Add Joomla admin environment variables to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,10 @@ services:
       - JOOMLA_DB_USER=${JOOMLA_DB_USER}
       - JOOMLA_DB_PASSWORD=${JOOMLA_DB_PASSWORD}
       - JOOMLA_DB_NAME=${JOOMLA_DB_NAME}
+      - JOOMLA_ADMIN_USER=${JOOMLA_ADMIN_USERNAME}
+      - JOOMLA_ADMIN_PASSWORD=${JOOMLA_ADMIN_PASSWORD}
+      - JOOMLA_ADMIN_EMAIL=${JOOMLA_ADMIN_EMAIL}
+      - JOOMLA_SITE_NAME=${JOOMLA_SITE_NAME}
     volumes:
       - ./joomla:/var/www/html
     networks:
