Update password requirements in .env-example, README, and start-project.ps1: enforce minimum length of 12 characters for security

--- a/.env-example
+++ b/.env-example
@@ -7,11 +7,11 @@
 # MUST be changed - use your project folder name:
 PROJECT_NAME=my-awesome-joomla-project
 
-# Security - use your own passwords:
-JOOMLA_ADMIN_PASSWORD=my-joomla-admin-password
+# Security - use your own passwords (minimum 12 characters required):
+JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_ADMIN_USERNAME=admin
-JOOMLA_DB_PASSWORD=my-secure-password
-MYSQL_ROOT_PASSWORD=my-root-password
+JOOMLA_DB_PASSWORD=joomla12345678
+MYSQL_ROOT_PASSWORD=mysql12345678
 
 
 # Optional customizations:
