--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 # .env Configuration File
-# WARNING: Do not use special characters like ={} in variables
+# WARNING: Do not use special characters like = { }  $ ` " ' \ §  in variables
 # ■ WARNING! ■ PROJECT_NAME may only contain lowercase letters, alphanumeric characters, hyphens and underscores
 # and must start with a letter or number
 # WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
@@ -8,6 +8,7 @@
 PROJECT_NAME=my-awesome-joomla-project
 
 # Security - use your own passwords (minimum 12 characters required):
+# WARNING: Do not use special characters like = { }  $ ` " ' \ §  
 JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=joomla12345678
