--- a/.env-example
+++ b/.env-example
@@ -8,7 +8,8 @@
 PROJECT_NAME=my-awesome-joomla-project
 
 # Security - use your own passwords (minimum 12 characters required):
-# WARNING: Do not use special characters like = { }  $ ` " ' \ §  
+# WARNING: Do not use special characters like { }  $ ` " ' \ §  in passwords
+# Use alphanumeric characters, hyphens, and underscores only.
 JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=joomla12345678
