Update .env-example and start-project.ps1: Replace hardcoded PROJECT_NAME with CURRENT_FOLDER placeholder for dynamic project name generation

--- a/.env-example
+++ b/.env-example
@@ -5,7 +5,7 @@
 # WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
 
 # MUST be changed - use your project folder name:
-PROJECT_NAME=my-awesome-joomla-project
+PROJECT_NAME=${CURRENT_FOLDER}
 
 # Security - use your own passwords (minimum 12 characters required):
 # WARNING: Do not use special characters like { }  $ ` " ' \ §  in passwords
