--- a/.env-example
+++ b/.env-example
@@ -2,19 +2,18 @@
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in variables
 # ■ WARNING! ■ PROJECT_NAME may only contain lowercase letters, alphanumeric characters, hyphens and underscores
 # and must start with a letter or number
-# WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
 
-# MUST be changed - use your project folder name:
+# ■ WARNING! ■ PROJECT_NAME must match the Docker Compose folder name
 PROJECT_NAME=${CURRENT_FOLDER}
 
-# Security - use your own passwords (minimum 12 characters required):
-# WARNING: Do not use special characters like { }  $ ` " ' \ §  in passwords
-# Use alphanumeric characters, hyphens, and underscores only.
+# Security - use your own passwords: 
+# ■ minimum 12 characters required 
+# ■ WARNING: Do not use special characters like { }  $ ` " ' \ §  in passwords 
+# ■ Use alphanumeric characters, hyphens, and underscores only.
 JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=joomla12345678
 MYSQL_ROOT_PASSWORD=mysql12345678
-
 
 # Optional customizations:
 JOOMLA_SITE_NAME=My Joomla Project
