--- a/.env-example
+++ b/.env-example
@@ -8,8 +8,8 @@ PROJECT_NAME=${CURRENT_FOLDER}
 
 # Security - use your own passwords: 
 # ■ minimum 12 characters required 
-# ■ WARNING: Do not use special characters like { }  $ ` " ' \ §  in passwords 
-# ■ Use alphanumeric characters, hyphens, and underscores only.
+# ■ WARNING: Do NOT use special characters like { }  $ ` " ' \ §  in passwords 
+# ■ Good characters: A-Z a-z 0-9 - _ . + * # @ % & ( ) = ? !
 JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=joomla12345678
