🎉 Enhanced Password Recovery System v4.1 - STABLE RELEASE
✅ Features:
- Automatic password synchronization between .env, MySQL, and configuration.php
- Smart password variation detection (_NEU_, _CHANGED_, etc.)
- Robust container restart logic
- Works even when database connection is OK
- Comprehensive PowerShell regex-based password extraction

🧪 Tested:
- Fresh git clone installation
- Password change scenarios
- Real-world usage patterns
- Container recreation workflows

🚀 Production Ready: Fully functional and tested system

--- a/.env-example
+++ b/.env-example
@@ -11,9 +11,12 @@ PROJECT_NAME=${CURRENT_FOLDER}
 # ■ WARNING: Do NOT use special characters like { }  $ ` " ' \ §  in passwords 
 # ■ Good characters: A-Z a-z 0-9 - _ . + * # @ % & ( ) = ? !
 JOOMLA_ADMIN_PASSWORD=admin12345678
-JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_DB_PASSWORD=joomla12345678
 MYSQL_ROOT_PASSWORD=mysql12345678
+
+# ■■■■■ JOOMLA ADMIN USERNAME ■■■■■
+# WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
+JOOMLA_ADMIN_USERNAME=admin
 
 # Optional customizations:
 JOOMLA_SITE_NAME=My Joomla Project
