■ Refine .env-example and docker-compose.yaml to enhance customization options for Joomla and MySQL images

--- a/.env-example
+++ b/.env-example
@@ -18,9 +18,14 @@ MYSQL_ROOT_PASSWORD=mysql12345678
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
 JOOMLA_ADMIN_USERNAME=admin
 
-# Optional customizations:
+# Optional Joomla customizations:
 JOOMLA_SITE_NAME=My Joomla Project
 JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+
+# Optional: Set custom image versions for MySQL and phpMyAdmin
+# If not set, defaults from docker-compose.yaml are used
+MYSQL_IMAGE=mysql:8.0
+PHPMYADMIN_IMAGE=phpmyadmin:latest
 
 # ■■■■■ DOCKER ■■■■■■■
 COMPOSE_PROJECT_NAME=${PROJECT_NAME}
