■ Enhance .env-example and docker-compose.yaml to support custom Joomla image configuration

--- a/.env-example
+++ b/.env-example
@@ -22,8 +22,9 @@ JOOMLA_ADMIN_USERNAME=admin
 JOOMLA_SITE_NAME=My Joomla Project
 JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 
-# Optional: Set custom image versions for MySQL and phpMyAdmin
+# Optional: Set custom image versions for JoomlaMySQL and phpMyAdmin
 # If not set, defaults from docker-compose.yaml are used
+JOOMLA_IMAGE=joomla:5-php8.3-apache
 MYSQL_IMAGE=mysql:8.0
 PHPMYADMIN_IMAGE=phpmyadmin:latest
 
