--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - db
 
   joomla:
-    image: joomla:5-php8.3-apache
+    image: "${JOOMLA_IMAGE:-joomla:5-php8.3-apache}"
     container_name: ${PROJECT_NAME}-joomla
     restart: always
     ports:
