Add LANDING_HOST_IP to .env-example and update index.php to use dynamic host IP for links

--- a/.env-example
+++ b/.env-example
@@ -14,6 +14,10 @@ JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_DB_PASSWORD=joomla12345678
 MYSQL_ROOT_PASSWORD=mysql12345678
 
+# Optional: Set custom host IP for the landing page (Project Information page)
+LANDING_HOST_IP=127.0.0.1
+
+
 # ■■■■■ JOOMLA ADMIN USERNAME ■■■■■
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
 JOOMLA_ADMIN_USERNAME=admin
