--- a/.env-example
+++ b/.env-example
@@ -17,6 +17,8 @@ MYSQL_ROOT_PASSWORD=mysql12345678
 # Optional: Set custom host IP for the landing page (Project Information page)
 LANDING_HOST_IP=127.0.0.1
 
+# Backup directory for Joomladatabase dumps
+DB_BACKUP_TARGET=/backup
 
 # ■■■■■ JOOMLA ADMIN USERNAME ■■■■■
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
@@ -53,7 +55,6 @@ JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
 JOOMLA_DB_NAME=joomla_db
 JOOMLA_ADMIN_USER=Joomla Hero
-
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
