Update .env-example and joomla-db-backup.sh for improved backup configuration and error handling

--- a/.env-example
+++ b/.env-example
@@ -14,19 +14,22 @@ JOOMLA_ADMIN_PASSWORD=admin12345678
 JOOMLA_DB_PASSWORD=joomla12345678
 MYSQL_ROOT_PASSWORD=mysql12345678
 
+# Optional Joomla customizations:
+JOOMLA_SITE_NAME=My Joomla Project
+JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+
 # Optional: Set custom host IP for the landing page (Project Information page)
 LANDING_HOST_IP=127.0.0.1
 
-# Backup directory for Joomladatabase dumps
-DB_BACKUP_TARGET=/backup
+# Backup directory for Joomladatabase dumps 
+# Generate with joomla-db-backup.sh (UNIX) or joomla-db-backup.ps1 (WINDOWS)
+# UNIX: DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/DB-BACKUPS
+# WINDOWS: DB_BACKUP_TARGET=C:\Users\YOUR_USER_NAME\projects\DB-BACKUPS
+DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/DB-BACKUPS
 
 # ■■■■■ JOOMLA ADMIN USERNAME ■■■■■
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
 JOOMLA_ADMIN_USERNAME=admin
-
-# Optional Joomla customizations:
-JOOMLA_SITE_NAME=My Joomla Project
-JOOMLA_ADMIN_EMAIL=admin@mydomain.com
 
 # Optional: Set custom image versions for JoomlaMySQL and phpMyAdmin
 # If not set, defaults from docker-compose.yaml are used
