Enclose Joomla site name, admin email, and admin username in quotes for consistency in .env-example

--- a/.env-example
+++ b/.env-example
@@ -15,8 +15,8 @@ JOOMLA_DB_PASSWORD=joomla12345678
 MYSQL_ROOT_PASSWORD=mysql12345678
 
 # Optional Joomla customizations:
-JOOMLA_SITE_NAME=My Joomla Project
-JOOMLA_ADMIN_EMAIL=admin@mydomain.com
+JOOMLA_SITE_NAME="My Joomla Project"
+JOOMLA_ADMIN_EMAIL="admin@mydomain.com"
 
 # Optional: Set custom host IP for the landing page (Project Information page)
 LANDING_HOST_IP=127.0.0.1
@@ -57,7 +57,7 @@ JOOMLA_DB_TYPE=mysqli
 JOOMLA_DB_PREFIX=joom_
 JOOMLA_DB_USER=joomla
 JOOMLA_DB_NAME=joomla_db
-JOOMLA_ADMIN_USER=Joomla Hero
+JOOMLA_ADMIN_USER="Joomla Hero"
 
 # ■■■■■ PHPMYADMIN ■■■■■■■
 PMA_HOST=db
