Refactor backup scripts: update .env-example for consistency and reintroduce joomla-db-backup.sh with enhanced backup logic

--- a/.env-example
+++ b/.env-example
@@ -21,11 +21,12 @@ JOOMLA_ADMIN_EMAIL="admin@mydomain.com"
 # Optional: Set custom host IP for the landing page (Project Information page)
 LANDING_HOST_IP=127.0.0.1
 
-# Backup directory for Joomladatabase dumps 
-# Generate with joomla-db-backup.sh (UNIX) or joomla-db-backup.ps1 (WINDOWS)
-# UNIX: DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/DB-BACKUPS
-# WINDOWS: DB_BACKUP_TARGET=C:\Users\YOUR_USER_NAME\projects\DB-BACKUPS
-DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/DB-BACKUPS
+# Backup directory for Joomla database dumps
+# UNIX: Generate with joomla-backup.sh (Backup DB + Joomla Directory)
+# WINDOWS: Generate with joomla-db-backup.ps1 (DB ONLY !)
+# UNIX: DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/BACKUPS
+# WINDOWS: DB_BACKUP_TARGET=C:\Users\YOUR_USER_NAME\projects\BACKUPS
+DB_BACKUP_TARGET=/home/YOUR_USER_NAME/projects/BACKUPS
 
 # ■■■■■ JOOMLA ADMIN USERNAME ■■■■■
 # WARNING: Do not use special characters like = { }  $ ` " ' \ §  in usernames
