Use PORT_MYSQL variable for MYSQL_PORT in .env-example for consistency

--- a/.env-example
+++ b/.env-example
@@ -49,7 +49,7 @@ PORT_MYSQL=3306
 MYSQL_DATABASE=joomla_db
 MYSQL_PASSWORD=${JOOMLA_DB_PASSWORD}
 MYSQL_USER=joomla
-MYSQL_PORT=3306
+MYSQL_PORT=${PORT_MYSQL}
 MYSQL_HOST=db
 
 # ■■■■■ JOOMLA ■■■■■■■
