--- a/php.ini
+++ b/php.ini
@@ -1,6 +1,7 @@
 display_errors = Off
-upload_max_filesize = 64M
-post_max_size = 128M
+upload_max_filesize = 256M
+post_max_size = 256M
 memory_limit = 256M
 max_execution_time = 300
+max_input_vars = 3000
 date.timezone = "UTC"
