Enhance PHP configuration and permissions setup in start-project.sh; add fix-permissions.sh for Joomla directory permissions

--- a/php.ini
+++ b/php.ini
@@ -5,3 +5,5 @@ memory_limit = 256M
 max_execution_time = 300
 max_input_vars = 3000
 date.timezone = "UTC"
+sys_temp_dir = "/tmp"
+upload_tmp_dir = "/tmp"
